--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-firebase/auth": "^12.1.0",
     "@react-native-firebase/firestore": "^12.1.0",
-    "@react-native-google-signin/google-signin": "^6.0.1"
+    "@react-native-google-signin/google-signin": "^6.0.1",
+    "react-native-camera": "^4.2.1",
+    "react-native-image-picker": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
