--- a/package.json
+++ b/package.json
@@ -10,26 +10,27 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^12.1.0",
+    "@react-native-firebase/auth": "^12.1.0",
+    "@react-native-firebase/firestore": "^12.1.0",
+    "@react-native-google-signin/google-signin": "^6.0.1",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "fbjs": "^0.8.18",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-camera": "^4.2.1",
     "react-native-eject": "^0.1.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^3.1.3",
     "react-native-reanimated": "^1.0.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-svg": "^12.1.1",
-    "@react-native-firebase/app": "^12.1.0",
-    "@react-native-async-storage/async-storage": "^1.15.5",
-    "@react-native-firebase/auth": "^12.1.0",
-    "@react-native-firebase/firestore": "^12.1.0",
-    "@react-native-google-signin/google-signin": "^6.0.1",
-    "react-native-camera": "^4.2.1",
-    "react-native-image-picker": "^3.1.3"
+    "react-native-text-recognition": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
