--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-reanimated": "^1.0.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
+    "react-native-select-dropdown": "^1.5.0",
     "react-native-svg": "^12.1.1",
     "react-native-text-recognition": "^1.0.0"
   },
