--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "axios": "^0.24.0",
     "fbjs": "^0.8.18",
     "react": "17.0.2",
     "react-native": "0.66.4",
